<resources>
    <string name="app_name">WichtelApp</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Layout: activity_login-->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_old_password">Old password</string>
    <string name="prompt_new_password">New password</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="username">Username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login"><b>Login</b></string>

    <!-- Layout: activity_signup -->
    <string name="action_sign_up">Sign up</string>
    <string name="title_activity_signup">activity_signup</string>
    <string name="signup"><b>Sign up</b></string>
    <string name="prompt_name">Name</string>
    <string name="repeatpassword">Repeat Password</string>
    <string name="title_activity_reset">ResetActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Layout: Fragment Groupe -->
    <string name="Emailadresse">Person einladen</string>
</resources>